2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_find_file): Handle multiple slashes in
	filename.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (find_in_b_tree) [MODE_AFS]: Fix handling of exact
	match in inner node.

2012-05-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (mount): Improve filesystem detection reliability.
	* grub-core/fs/ext2.c (grub_ext2_mount): Likewise.
	* grub-core/fs/hfs.c (grub_hfs_mount): Likewise.
	* grub-core/fs/hfsplus.c (grub_hfsplus_mount): Likewise.
	* grub-core/fs/jfs.c (grub_jfs_mount): Likewise.
	* grub-core/fs/minix.c (grub_minix_mount): Likewise.
	* grub-core/fs/ntfs.c (grub_ntfs_mount): Likewise.
	* grub-core/fs/romfs.c (grub_romfs_mount): Likewise.
	* grub-core/fs/xfs.c (grub_xfs_mount): Likewise.

2012-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Use grub-probe and not cmp to check that disk is empty.

	* util/grub-install.in: Use grub-probe for zero-check.
	* util/grub-probe.c (PRINT_ZERO_CHECK): New enum value.
	(probe): Handle PRINT_ZERO_CHECK.
	(argp_parser): Handle -t zero_check.

2012-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Flush block cache on adding disk to device map.

	* grub-core/kern/emu/hostdisk.c (flush_initial_buffer): New function.
	(grub_hostdisk_os_dev_to_grub_drive): Call flush_initial_buffer on
	adding.
	(read_device_map): Likewise.
	(open_device): Flush on opening.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_find_file): Handle prefix.
	(handle_symlink): Fix off-by-one error.
	Canonicalize the target.
	(grub_cpio_dir): Canonicalize the name.
	Fix memory leak.
	Set directory.
	(grub_cpio_open): Canonicalize the name.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Fix symlink
	handling.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
